# scalpex-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  bot.py  config.py  main.py  main_screen.kv  pyproject.toml  requirements-dev.txt  requirements.txt  scalpex.kv  План реализации приложения.md  Полезные команды.md
client/: ScalpEX.spec  __init__.py  desktop.kv  main.py  main_screen.kv  mobile.kv
client/assets/: .gitkeep
deployment/: .gitkeep
docs/: .gitkeep
locales/: .gitkeep
managers/: __init__.py  loguru_manager.py  support_manager.py  telegram_manager.py  websocket_manager.py
one_off_scripts/: .gitkeep
scripts/: .gitkeep  start-dev.bat  start-dev.sh
server/: .env.example  __init__.py  bot_logic.py  requirements.txt  run_bot.py
server/managers/: __init__.py  loguru_manager.py  notification_manager.py
shared/: __init__.py  enums.py
tests/: .gitkeep
website/: .gitkeep
